tests/codegen/fail/input_object/enum/derive_no_underscore.rs
use juniper::GraphQLInputObject;

#[derive(GraphQLInputObject)]
enum Object {
    #[graphql(name = "__test")]
    Test(String),
}

fn main() {}
